@@ -1,3 +1,8 @@
+2012-12-06  Sam Steingold  <sds@gnu.org>
+
+	* gnus-start.el (gnus-before-resume-hook): Add.
+	(gnus-1): Run it when Gnus is alive.
+
 2012-12-05  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* gmm-utils.el (gmm-called-interactively-p): Restore as a macro.
